--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "front-end",
   "version": "0.1.0",
-  "homepage": "https://omaressam-18.github.io/dern-support",
+  "homepage": "https://omaressam-18.github.io/dern-support/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
